change themes, finish all pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<link href="https://allfont.net/allfont.css?fonts=compact-light" rel="stylesheet" type="text/css" />
 <app-nav-bar></app-nav-bar>
 <main role="main" class="container">
   <router-outlet></router-outlet>
