Added Oswald font

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<link href="https://allfont.net/allfont.css?fonts=compact-light" rel="stylesheet" type="text/css" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;600&display=swap" rel="stylesheet">
 <app-nav-bar></app-nav-bar>
 <main role="main" class="container">
   <router-outlet></router-outlet>
