--- a/src/app/meet/meet.component.css
+++ b/src/app/meet/meet.component.css
@@ -21,3 +21,15 @@
 .intro-2{
     flex-basis: 50%;
 }
+
+p{
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    font-size: 11pt;
+}
+
+H3{
+    font-family: 'Oswald', sans-serif;
+    font-weight: 600;
+    font-size: 28pt;
+}
