--- a/src/app/platform/platform.component.css
+++ b/src/app/platform/platform.component.css
@@ -11,3 +11,9 @@
     border: 2px crimson solid;
     border-width: 2px;
 }
+
+
+H2{
+    font-family: 'Oswald', sans-serif;
+    font-weight: 600;
+}
