Home page design

--- a/src/app/meet/meet.component.html
+++ b/src/app/meet/meet.component.html
@@ -3,7 +3,7 @@
 
     <div class="intro p-2">
         <div class="intro-1">
-            <img src="../../assets/stock/Headshots-02-1024x1024.png" width="100%">
+            <img src="../../assets/Candidates/april-min.jpg" width="100%">
         </div>
     
         <div class="intro-1">
@@ -14,7 +14,7 @@
  
     
         <div class="intro-2 intro-2-img">
-            <img src="../../assets/stock/Headshots-02-1024x1024.png" width="100%">
+            <img src="../../assets/Candidates/taylor-min.jpg" width="100%">
         </div>
 
 <div class="intro-2 intro-2-write">
