--- a/src/app/platform/platform.component.html
+++ b/src/app/platform/platform.component.html
@@ -1,27 +1,8 @@
-<p>platform works!</p>
 
 <!-- TODO: CENTER H4 and image -->
-<!-- * Collapsible well are amazing for collapse -->
 
 
-<div class="platform-icons">
-    <div class="box1 p-2">
-        <h4>Platform 1</h4>
-        <img src="../../assets/stock/platform.png" alt="">
-    </div>
-    <div class="box1 p-2">
-        <h4>Platform 2</h4>
-        <img src="../../assets/stock/platform.png" alt="">
-    </div>
-    <div class="box1 p-2">
-        <h4>Platform 3</h4>
-        <img src="../../assets/stock/platform.png" alt="">
-    </div>
-    <div class="box1 p-2">
-        <h4>Platform 4</h4>
-        <img src="../../assets/stock/platform.png" alt="">
-    </div>
-</div>
+<platform-icons></platform-icons>
 
 <H2 class="text-center p-3">WE CARE FOR STUDENTS??? #GoCats</H2>
 
