--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,11 +6,19 @@
 p{
     font-family: 'Oswald', sans-serif;
     font-weight: 300;
-    font-size: 11pt;
+    font-size: 16pt;
+    line-height: 1.2;
 }
-
+p span{
+    color: #bb0f55;
+}
 H3{
     font-family: 'Oswald', sans-serif;
     font-weight: 600;
     font-size: 28pt;
+}
+
+H1{
+    font-family: 'Oswald', sans-serif;
+    font-weight: 600;
 }
