--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,13 @@
-<img src="../../assets/stock/pexels-pixabay-210307.jpg" class="img-fluid" >
+<img src="../../assets/Candidates/GA-min-cropped.jpg" class="img-fluid" >
 <H3 class="mt-3">Hey Bearcats!</H3>
 <p>
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, enim provident. Officiis ullam velit rem dicta, reiciendis ipsum quisquam inventore iste amet minus corrupti magnam saepe doloremque corporis labore veniam? Repellendus nemo id adipisci? Rerum, animi vero, architecto mollitia minus est neque magnam dicta error, natus similique aspernatur maiores! Doloremque aut modi accusantium libero error, fugiat nemo dignissimos doloribus itaque necessitatibus labore facilis autem numquam nesciunt nulla corrupti! Eveniet aspernatur eius dolorum voluptatem accusamus hic sunt aut placeat nisi dolores quam aliquid, quos natus, excepturi adipisci recusandae non asperiores facere corrupti itaque! Vero dignissimos maxime magni sequi modi id ut?
+    Gable + Allgood here! We're very excited to be running to be your next Student Body President + Vice President at the University of Cincinnati! We look forward to every COVID Careful interaction with you over these next couple weeks and can't wait to learn what's most important to you! We hope to share more about our vision and platform and <span>#TogetherWeWill</span> build the movement to help students succeed!
 </p>
+<H1 style="text-align: center;">What We Stand For</H1>
 
-<img src="../../assets/stock/pexels-kelly-lacy-3030268.jpg" class="img-fluid">
+<platform-icons [description]="true"></platform-icons>
+
+
+<h3>Intro Video</h3>
+
+<iframe width="100%" height="600px" src="https://www.youtube.com/embed/6MwtVvoMJFE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
