--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -23,12 +23,11 @@
 data-toggle="collapse" data-target="#navbarToggler"
   </nav> -->
 
-  <link href="https://allfont.net/allfont.css?fonts=compact-light" rel="stylesheet" type="text/css" />
 
-  <nav class="navbar navbar-expand-lg navbar-dark">
+  <nav class="navbar navbar-expand-lg navbar-light sticky-top">
     
     <a class="navbar-brand logo" routerLink='/'>
-    <img src="../../assets/logo/Site_logo.png" height="150" width="150">
+    <img src="../../assets/logo/SecondarySlogan_Opt2.png" height="100" width="100">
     <!-- <div class="maintext">
       <p>GABLE+</p>
       <p>ALLGOOD</p>
@@ -41,17 +40,23 @@ data-toggle="collapse" data-target="#navbarToggler"
   
     <div class="collapse navbar-collapse" id="navbarToggler" [ngbCollapse]="isCollapsed">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-            <a routerLink="/meet" class="nav-link" routerLinkActive="active">Meet April & Taylor</a>
+        <li class="nav-item ml-4">
+            <a routerLink="/meet" class="nav-link" routerLinkActive="active">Meet April + Taylor</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ml-4">
             <a routerLink="/platform" class="nav-link" routerLinkActive="active">Platform</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ml-4">
             <a routerLink="/team" class="nav-link" routerLinkActive="active">Our Team</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item ml-4">
             <a routerLink="/campus-support" class="nav-link" routerLinkActive="active">Campus Support</a>
+          </li>
+          <li class="nav-item ml-4">
+            <a routerLink="/campus-support" class="nav-link" routerLinkActive="active">Submit Your Ideas!</a>
+          </li>
+          <li class="nav-item ml-4 mr-5">
+            <a routerLink="/campus-support" class="nav-link" routerLinkActive="active">Go Vote!</a>
           </li>
       </ul>
     </div>
