--- a/src/app/platform/platform.component.html
+++ b/src/app/platform/platform.component.html
@@ -2,7 +2,7 @@
 <!-- TODO: CENTER H4 and image -->
 
 
-<platform-icons></platform-icons>
+<platform-icons [description]="false"></platform-icons>
 
 <H2 class="text-center p-3">WE CARE FOR STUDENTS??? #GoCats</H2>
 
