added submit ideas, edited platform page

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -53,10 +53,10 @@ data-toggle="collapse" data-target="#navbarToggler"
             <a routerLink="/campus-support" class="nav-link" routerLinkActive="active">Campus Support</a>
           </li>
           <li class="nav-item ml-4">
-            <a routerLink="/campus-support" class="nav-link" routerLinkActive="active">Submit Your Ideas!</a>
+            <a routerLink="/ideas" class="nav-link" routerLinkActive="active">Submit Your Ideas!</a>
           </li>
           <li class="nav-item ml-4 mr-5">
-            <a routerLink="/campus-support" class="nav-link" routerLinkActive="active">Go Vote!</a>
+          <a routerLink="/campus-support" class="nav-link" routerLinkActive="active">Go Vote!</a>
           </li>
       </ul>
     </div>
