--- a/src/app/platform/platform.component.html
+++ b/src/app/platform/platform.component.html
@@ -4,6 +4,26 @@
 
 <platform-icons [description]="false"></platform-icons>
 
-<H2 class="text-center p-3">WE CARE FOR STUDENTS??? #GoCats</H2>
+<H2 class="text-center p-3">Campus Experience</H2>
 
-<platform-list [platforms] = "platforms"></platform-list> 
+<platform-list [platforms] = "campusExp"></platform-list> 
+
+<H2 class="text-center p-3">Action</H2>
+
+<platform-list [platforms] = "action"></platform-list> 
+
+<H2 class="text-center p-3">Sustainability</H2>
+
+<platform-list [platforms] = "sustainability"></platform-list> 
+
+<H2 class="text-center p-3">Sustainability</H2>
+
+<platform-list [platforms] = "sustainability"></platform-list> 
+
+<H2 class="text-center p-3">Varsity</H2>
+
+<platform-list [platforms] = "varsity"></platform-list>
+
+<H2 class="text-center p-3">Your Campus, Your Voice</H2>
+
+<platform-list [platforms] = "yourcampus"></platform-list>
