--- a/src/app/platform/platform-icons/platform-icons.component.html
+++ b/src/app/platform/platform-icons/platform-icons.component.html
@@ -3,7 +3,7 @@
 
 <div class="platform-icons mt-2">
     <div class="box1 ">
-        <h4>Campus <br>Experience</h4>
+        <h4>Campus Experience</h4>
         <img src="../../assets/Platform/CampusEx.png" height="200px" width="200px" alt="">
         <p *ngIf="description">The College experience only happens once and we intend to make the most of it for all Bearcats!</p>
     </div>
