--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -56,9 +56,8 @@ data-toggle="collapse" data-target="#navbarToggler"
             <a routerLink="/ideas" class="nav-link" routerLinkActive="active">Submit Your Ideas!</a>
           </li>
           <li class="nav-item ml-4 mr-5">
-          <a routerLink="/campus-support" class="nav-link" routerLinkActive="active">Go Vote!</a>
+            <a routerLink="/campus-support" class="nav-link align-top" routerLinkActive="active">Go Vote!</a>
           </li>
       </ul>
     </div>
-  
   </nav>
