added borders, google form

--- a/src/app/meet/meet.component.html
+++ b/src/app/meet/meet.component.html
@@ -3,7 +3,7 @@
 <h3 class="p-2">Meet the Candidates!</h3>
     <div class="intro p-2">
         <div class="intro-1 p-2">
-            <img class="pic-shot" src="../../assets/Candidates/april-min.jpg" width="100%">
+            <img class="pic-shot" src="../../assets/Candidates/april-min.png" width="100%">
             <img src="../../assets/Candidates/AGPC.png" width="100%" alt="">
         </div>
     
@@ -20,7 +20,7 @@
  
     
         <div class="intro-2 intro-2-img p-2">
-            <img class="pic-shot" src="../../assets/Candidates/taylor-min.jpg" width="100%">
+            <img class="pic-shot" src="../../assets/Candidates/taylor-min.png" width="100%">
             <img src="../../assets/Candidates/TAVPC.png" width="100%" alt="">
         </div>
 
