--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -11,6 +11,18 @@
     font-weight: 300;
     
 }
+
+.navbar-nav .nav-item .nav-link {
+    color: black;
+}
+.navbar-nav .nav-item .nav-link.active{
+    color:#bb0f55;
+}
+.navbar-nav .nav-item:hover .nav-link {
+    color: #bb0f55;
+}
+
+
 .navbar-brand{
     line-height: 5px;
     
