--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -24,7 +24,7 @@ data-toggle="collapse" data-target="#navbarToggler"
   </nav> -->
 
 
-  <nav class="navbar navbar-expand-lg navbar-light sticky-top">
+  <nav class="navbar navbar-expand-lg sticky-top">
     
     <a class="navbar-brand logo" routerLink='/'>
     <img src="../../assets/logo/SecondarySlogan_Opt2.png" height="100" width="100">
