--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -2,13 +2,12 @@
 
 <h2 class="mt-2">Meet the team!</h2>
 <div class="row">
-    <div class="col-md-3" *ngFor="let member of members | async">
-        <div class="p-2 mt-2">
-            <img class="img-fluid" [src]="member.address || member.addressHover" (mouseenter)="member.address = member.address.Hover" (mouseleave)="member.address = member.addressHoverOut" alt="">
-            <div>
-                <p class="text-center">{{member.name}}</p>
-            </div>
+    <div class="col-md-3" *ngFor="let member of members| async; index as i">
+        <div class="main-cont">
+            <img class="img-fluid main-img" [src]="member.address || member.addressHover" (mouseenter)="member.address = member.address.Hover" (mouseleave)="member.address = member.addressHoverOut" alt="" [ngClass]="{'lcherry':i%4===0, 'yellow':i%4===1, 'dcherry':i%4===2, 'cherry':i%4===3}">
         </div>
+                <p class="text-center">{{member.name}}</p>
+           
     </div>
 </div>
 
