remove a platform point on landing page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
 </p>
 <H1 style="text-align: center;">What We Stand For</H1>
 
-<platform-icons [description]="true"></platform-icons>
+<platform-icons [description]="true" [lastPlat]="false"></platform-icons>
 
 
 <h3>Intro Video</h3>
