--- a/src/app/platform/platform-icons/platform-icons.component.html
+++ b/src/app/platform/platform-icons/platform-icons.component.html
@@ -22,7 +22,7 @@
         <img src="../../assets/Platform/OhVarsity.png" height="200px" width="200px" alt="">
         <p *ngIf="description">As spirit and excitement return to our campus we envision our One Team united from school day to game day</p>
     </div>
-    <div class="box1 ">
+    <div class="box1 " *ngIf = "lastPlat">
         <h4>You!</h4>
         <img src="../../assets/Platform/Submit.png" height="200px" width="200px" alt="">
         <p *ngIf="description">Want to see something never done before on campus? Submit your ideas for Gable + Allgood to improve UC and your idea might just be chosen to be our final platform point!</p>
