--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -40,24 +40,24 @@ data-toggle="collapse" data-target="#navbarToggler"
   
     <div class="collapse navbar-collapse" id="navbarToggler" [ngbCollapse]="isCollapsed">
       <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-        <li class="nav-item ml-4">
+        <li class="nav-item ml-5">
             <a routerLink="/meet" class="nav-link" routerLinkActive="active">Meet April + Taylor</a>
           </li>
-          <li class="nav-item ml-4">
+          <li class="nav-item ml-5">
             <a routerLink="/platform" class="nav-link" routerLinkActive="active">Platform</a>
           </li>
-          <li class="nav-item ml-4">
+          <li class="nav-item ml-5">
             <a routerLink="/team" class="nav-link" routerLinkActive="active">Our Team</a>
           </li>
-          <li class="nav-item ml-4">
+          <li class="nav-item ml-5">
             <a routerLink="/campus-support" class="nav-link" routerLinkActive="active">Campus Support</a>
           </li>
-          <li class="nav-item ml-4">
+          <li class="nav-item ml-5 mr-5">
             <a routerLink="/ideas" class="nav-link" routerLinkActive="active">Submit Your Ideas!</a>
           </li>
-          <li class="nav-item ml-4 mr-5">
+          <!-- <li class="nav-item ml-4 mr-5">
             <a routerLink="/campus-support" class="nav-link align-top" routerLinkActive="active">Go Vote!</a>
-          </li>
+          </li> -->
       </ul>
     </div>
   </nav>
