--- a/src/app/submit-ideas/submit-ideas.component.html
+++ b/src/app/submit-ideas/submit-ideas.component.html
@@ -1,1 +1,5 @@
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSerarF_ugq0HG24x6fKagxDNzJ4sFumgX1OtjbXGi8py2PXMQ/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<H2 class="p-2 text-center">Make Your Voice Heard</H2>
+<div class="googleform">
+
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSerarF_ugq0HG24x6fKagxDNzJ4sFumgX1OtjbXGi8py2PXMQ/viewform?embedded=true" width="800" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</div>
