--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,6 +1,6 @@
 <!-- TODO: Maybe use flexbox instead?? Responsiveness is fucked with grid -->
 
-<h2 class="mt-2">Meet the team!</h2>
+<h2 class="mt-2 p-2">Meet the team behind <span>#TogetherWeWill</span></h2>
 <div class="row">
     <div class="col-md-3" *ngFor="let member of members| async; index as i">
         <div class="main-cont">
