--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -28,14 +28,10 @@ data-toggle="collapse" data-target="#navbarToggler"
     
     <a class="navbar-brand logo" routerLink='/'>
     <img src="../../assets/logo/SecondarySlogan_Opt2.png" height="100" width="100">
-    <!-- <div class="maintext">
-      <p>GABLE+</p>
-      <p>ALLGOOD</p>
-    </div>
-    <p id="subtext">TOGET<span>HER</span> WE WILL</p> -->
   </a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed"  aria-controls="navbarToggler" aria-expanded="false" aria-label = "Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <!-- <span class="navbar-toggler-icon"></span> -->
+      <span class="" role="button" ><i class="fa fa-bars" aria-hidden="true" style="color:#bb0f55"></i></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarToggler" [ngbCollapse]="isCollapsed">
