added pronouns, last platform

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -22,3 +22,8 @@ H1{
     font-family: 'Oswald', sans-serif;
     font-weight: 600;
 }
+
+.intro-vid{
+    text-align: center;
+    padding-top: 20px;
+}
