--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,4 @@
 
 <platform-icons [description]="true" [lastPlat]="false"></platform-icons>
 
-
-<h3>Intro Video</h3>
-
-<iframe width="100%" height="600px" src="https://www.youtube.com/embed/6MwtVvoMJFE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class="intro-vid" src="https://player.vimeo.com/video/512833122?badge=0&autopause=0&player_id=0&app_id=58479" width="100%" height="500" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Intro Video"></iframe>
