--- a/src/app/platform/platform.component.html
+++ b/src/app/platform/platform.component.html
@@ -6,22 +6,22 @@
 
 <H2 class="text-center p-3">Campus Experience</H2>
 
-<platform-list [platforms] = "campusExp"></platform-list> 
+<platform-list [platforms] = "campusExp" [specialCase]="false"></platform-list> 
 
 <H2 class="text-center p-3">Action</H2>
 
-<platform-list [platforms] = "action"></platform-list> 
+<platform-list [platforms] = "action" [specialCase]="false"></platform-list> 
 
 <H2 class="text-center p-3">Sustainability</H2>
 
-<platform-list [platforms] = "sustainability"></platform-list> 
+<platform-list [platforms] = "sustainability" [specialCase]="false"></platform-list> 
 
 
 
 <H2 class="text-center p-3">Varsity</H2>
 
-<platform-list [platforms] = "varsity"></platform-list>
+<platform-list [platforms] = "varsity" [specialCase]="false"></platform-list>
 
 <H2 class="text-center p-3">Your Campus, Your Voice</H2>
 
-<platform-list [platforms] = "yourcampus"></platform-list>
+<platform-list [platforms] = "yourcampus" [specialCase]="true"></platform-list>
