fixed mobile responsiveness

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,28 @@
 <footer>
     <div class="container">
         <div class="row justify-content-md-center">
-            <div class="social-media"><img height="50px" width="50px" src="../../assets/Social Media/iconfinder_Rounded_Facebook_svg_5282541.png"  alt=""></div>
-            <div class="social-media"><img height="50px" width="50px" src="../../assets/Social Media/icons8-tiktok-512.png" alt=""></div>
-            <div class="social-media"><img height="50px" width="50px" src="../../assets/Social Media/iconfinder_Rounded_Instagram_svg_5282544.png" alt=""></div>
-            <div class="social-media"><img height="50px" width="50px" src="../../assets/Social Media/iconfinder_Rounded_Twitter5_svg_5282551.png" alt=""></div>
+
+            <div class="social-media ml-5">
+                <a href="https://www.facebook.com/Gable-Allgood-2021-111333557660106" target="_blank" rel="noopener noreferrer">
+                    <img height="50px" width="50px" src="../../assets/Social Media/iconfinder_Rounded_Facebook_svg_5282541.png"  alt="">
+                </a>
+            </div>
+
+            <div class="social-media">
+                <img height="50px" width="50px" src="../../assets/Social Media/icons8-tiktok-512.png" alt="">
+            </div>
+
+            <div class="social-media">
+                <a href="https://instagram.com/gableallgood2021?igshid=3iad8ha2zfvg" target="_blank" rel="noopener noreferrer">
+                    <img height="50px" width="50px" src="../../assets/Social Media/iconfinder_Rounded_Instagram_svg_5282544.png" alt="">
+                </a>
+            </div>
+            
+            <div class="social-media">
+                <a href="https://twitter.com/gableallgood?s=21" target="_blank" rel="noopener noreferrer">
+                <img height="50px" width="50px" src="../../assets/Social Media/iconfinder_Rounded_Twitter5_svg_5282551.png" alt="">
+            </a>
+            </div>
         </div>
     </div>
 </footer>
