--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -7,7 +7,7 @@ footer{
 }
 
 img{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 30px;
+    margin-top: 1.1rem;
+    margin-bottom: 1.1rem;
+    margin-right: 1.1rem;
 }
