--- a/src/app/platform/platform-icons/platform-icons.component.html
+++ b/src/app/platform/platform-icons/platform-icons.component.html
@@ -5,7 +5,7 @@
     <div class="box1 ">
         <h4>Campus Experience</h4>
         <img src="../../assets/Platform/CampusEx.png" height="200px" width="200px" alt="">
-        <p *ngIf="description">The College experience only happens once and we intend to make the most of it for all Bearcats!</p>
+        <p *ngIf="description">The college experience only happens once and we intend to make the most of it for all Bearcats!</p>
     </div>
     <div class="box1 ">
         <h4>Action</h4>
@@ -20,7 +20,7 @@
     <div class="box1 ">
         <h4>Oh, Varsity</h4>
         <img src="../../assets/Platform/OhVarsity.png" height="200px" width="200px" alt="">
-        <p *ngIf="description">As spirit and excitement return to our campus we envision our One Team united from school day to game day</p>
+        <p *ngIf="description">As spirit and excitement return to our campus we envision our One Team united from school day to game day.</p>
     </div>
     <div class="box1 " *ngIf = "lastPlat">
         <h4>You!</h4>
