--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -27,3 +27,9 @@ H1{
     text-align: center;
     padding-top: 20px;
 }
+
+#line-strip{
+    height: 0px;
+    width: 100%;
+    border-bottom: 2px solid #bb0f55;
+}
