--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,8 @@
 <p>
     Gable + Allgood here! We're very excited to be running to be your next Student Body President + Vice President at the University of Cincinnati! We look forward to every COVID Careful interaction with you over these next couple weeks and can't wait to learn what's most important to you! We hope to share more about our vision and platform and <span>#TogetherWeWill</span> build the movement to help students succeed!
 </p>
-<H1 style="text-align: center;">What We Stand For</H1>
+<H1 style="text-align: center;" class="p-2">What We Stand For</H1>
+<div id="line-strip"></div>
 
 <platform-icons [description]="true" [lastPlat]="false"></platform-icons>
 
