--- a/src/app/meet/meet.component.html
+++ b/src/app/meet/meet.component.html
@@ -12,7 +12,7 @@
         <br> <br>
         While venturing out into the Bearcat Community as a first year student, I was amazed at the countless opportunities students had ready for them. Students were able to find their place at the table, make a difference in the surrounding area, and build a skillset that accompanied them to future success. I quickly became interested in the role the Undergraduate Student Government served within the student body and became involved as a member of the Student Government Mentoring Program, Executive Staff, and as a Senator At-Large. Here I learned how I want to make a positive, lasting impact through the guidance of others, dedication for the betterment of all, and the knowledge that a student's voice is the most powerful voice on a college campus.
             <br><br>
-            I, still a growing leader, have dug deep to educate myself and learn more of the perspectives students with differing identities than mine hold and am determined to continue this self work. I ask that through this journey, you join us in keeping each other accountable and willing to listen to one another. As potentially the first female slate at UC to be elected, Taylor and I both know that we must lay a foundation that sets forth the notion that we may be the first, but we will not be the last. That anyone who looks to a position questioning if they should even dream about holding it, know that they have all the right to do so. 
+            I, still a growing leader, have dug deep to educate myself and learn more of the perspectives students with differing identities than mine hold and am determined to continue this self work. I ask that through this journey, you join us in keeping each other accountable and willing to listen to one another. As potentially the first women slate at UC to be elected, Taylor and I both know that we must lay a foundation that sets forth the notion that we may be the first, but we will not be the last. That anyone who looks to a position questioning if they should even dream about holding it, know that they have all the right to do so. 
             <br> <br>
             Together We Will complete worthwhile initiatives for a greener, sustainably enriched campus. Together We Will strive to make a difference in the lives of each student, community member, and faculty member through increased focus on resources and needs. Together We Will be better and amplify each other's voices so that they are heard, seen, and valued. Together We Will empower women to run and make history on UC's campus. I am running to be your next Student Body President because I know that Together We Will never settle, push past barriers, and truly exhibit that Next Lives Here.</p>
 
@@ -35,12 +35,14 @@
 </div>
 </div>
 
+<div class="vision text-center">
+    <h1>OUR VISION FOR THE STUDENT GOVERNMENT</h1>
+<p>This past year has presented circumstances like no other before, there is a need to give power back to students. By focusing on student involvement, academic opportunities, and the little things that make the college experience that much better, Gable+Allgood dedicates this campaign to the campus experience lost over the last year. The next steps of UC defines the legacy of its current students; Together We Will create a campus accepting and celebrative of all students.</p>
+</div>
+
 <div class="goals text-center">
     <h1>OUR VISION FOR THE STUDENT BODY</h1>
 <p>We envision a Student Government that is transparent and accessible to all students. By creating initiatives for open dialogue, efforts to advance sustainability, and re-envisioning the University of Cincinnati holistically, we will welcome every student to a spot at our table. We believe that there is no stronger voice on a college campus than that of a student - and Together We Will make sure all are heard. </p>
 </div>
 
-<div class="vision text-center">
-    <h1>OUR VISION FOR THE STUDENT GOVERNMENT</h1>
-<p>This past year has presented circumstances like no other before, there is a need to give power back to students. By focusing on student involvement, academic opportunities, and the little things that make the college experience that much better, Gable+Allgood dedicates this campaign to the campus experience lost over the last year. The next steps of UC defines the legacy of its current students; Together We Will create a campus accepting and celebrative of all students.</p>
-</div>
+
